# wavelet-matrix

./: Cargo.toml  README.md  pyproject.toml  wavelet_matrix.pyi
.github/workflows/: CI.yml  doc.yml
benchmarks/: bench_dynamic_wavelet_matrix.py  bench_wavelet_matrix.py
docs/: search.js  wavelet_matrix.html
src/: lib.rs
src/dynamic_wavelet_matrix/: dynamic_bit_vector.rs  dynamic_wavelet_matrix.rs
src/python/: dynamic_wavelet_matrix.rs  mod.rs  wavelet_matrix.rs
src/traits/: bit_vector.rs  dynamic_bit_vector.rs  dynamic_wavelet_matrix.rs  mod.rs  wavelet_matrix.rs
src/traits/wavelet_matrix/: dynamic_wavelet_matrix.rs  wavelet_matrix.rs
src/wavelet_matrix/: bit_vector.rs  wavelet_matrix.rs
tests/: test_dynamic_wavelet_matrix.py  test_wavelet_matrix.py
