[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "wavelet-matrix"
dynamic = ["version"]
description = "Python Wavelet Matrix accelerated by Rust, with support for dynamic updates and fast rank/select/quantile queries."
authors = [
    {name = "Koki Watanabe"}
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["wavelet-matrix", "data-structure", "algorithm", "rank", "select", "quantile"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "maturin>=1.9,<2.0",
]

[project.urls]
Homepage = "https://github.com/math-hiyoko/wavelet-matrix"
Documentation = "https://github.com/math-hiyoko/wavelet-matrix#readme"
Source = "https://github.com/math-hiyoko/wavelet-matrix"
Tracker = "https://github.com/math-hiyoko/wavelet-matrix/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
python_files = ["test_*.py", "bench_*.py"]
python_classes = ["Test*", "Bench*"]
python_functions = ["test_*", "bench_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--benchmark-columns=mean,stddev,min,max",
    "--benchmark-group-by=func",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["wavelet_matrix"]
